[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/font/ARCADE.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Network_setup.gd" type="Script" id=2]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 1 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -1.0
margin_right = 9.0
margin_bottom = -1.0
script = ExtResource( 2 )

[node name="Map" parent="." instance=ExtResource( 3 )]

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
margin_left = 392.0
margin_top = 242.0
margin_right = 616.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 163, 29 )
custom_fonts/font = SubResource( 1 )
text = "CREATE SERVER"
script = SubResource( 3 )

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
margin_left = 392.0
margin_top = 339.0
margin_right = 616.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 163, 29 )
custom_fonts/font = SubResource( 1 )
text = "JOIN SERVER"

[node name="Server_ip_adress" type="LineEdit" parent="Multiplayer_configure"]
margin_left = 313.0
margin_top = 175.0
margin_right = 706.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "ENTER IP ADRESS"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_ip_adress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -171.0
margin_bottom = -85.0
custom_fonts/font = SubResource( 4 )
align = 1

[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
